[package]
name = "sam-env-diff"
version = "1.0.0"
edition = "2021"
authors = ["Sam M."]
license = "MIT"
description = "Diff your .env files. Secrets stay masked."
repository = "https://github.com/samdigital/sam-env-diff-rs"

[[bin]]
name = "sam-env-diff"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
